[package]
name = "core_app_cli"
version = "0.1.0"
edition = "2021"
authors = ["zo-el <joelulahanna@gmail.com>"]

[dependencies]
anyhow = "1.0"
holochain_types = "0.2.2-beta-rc.1"
hpos_hc_connect = { version="0.1.0", path = "../hpos_hc_connect" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.0"
rmp-serde = "1.1.1"
tokio = { version = "1.11", features = [ "full" ] }
