[package]
name = "hf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
holochain_types = "0.1.0"
tokio = { version = "1.11", features = [ "full" ] }
structopt = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
hpos_hc_connect = { version="0.1.0", path = "../hpos_hc_connect" }