[package]
name = "holofuel_connect"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
holochain_conductor_api = "0.1.0"
holochain_keystore = "0.1.0"
holochain_types = "0.1.0"
holochain_client = "0.3.0"
lair_keystore_api = "0.2.3"
tokio = { version = "1.11", features = [ "full" ] }
serde = { version = "1.0", features = ["derive"] }
url2 = "0.0.6"
sodoken = "=0.0.7"
getrandom = "0.2.7"
