[package]
name = "holofuel_init"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
holochain_types = "0.2.0"
hpos_hc_connect = { version="0.1.0", path = "../hpos_hc_connect" }
tokio = { version = "1.11", features = [ "full" ] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.37"
rmp-serde = "1.1.1"
