[package]
name = "hpos_hc_connect"
version = "0.1.0"
edition = "2021"
authors = ["zo-el <joelulahanna@gmail.com>"]

[dependencies]
anyhow = "1.0"
holochain_conductor_api = "=0.2.2-beta-rc.1"
holochain_keystore = "=0.2.2-beta-rc.1"
holochain_types = "0.2.2-beta-rc.1"
holochain_client = "=0.4.2-rc.0"
lair_keystore_api = "0.3.0"
tokio = { version = "1.11", features = [ "full" ] }
serde = { version = "1.0", features = ["derive"] }
url2 = "0.0.6"
sodoken = "0.0.9"
getrandom = "0.2.7"
serde_yaml = "0.9.11"
tracing = "0.1.37"
serde_json = "1.0.96"